[package]
name = "vstminihost"
version = "0.1.0"
authors = ["Nathan Graule <solarliner@gmail.com>", "George Atkinson <geomyles@yahoo.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vst = "0.2.1"
tuix = { git = "https://github.com/geom3trik/tuix.git", branch = "without_send" }
nfd = "0.0.4"